The local and the queue scheduler now checks resource availability before accepting a job