@@ -988,6 +988,11 @@ public class ExecutionGraph implements ExecutionListener {
 		return this.indexToCurrentExecutionStage;
 	}
 
+	/**
+	 * Returns the stage which is currently executed.
+	 * 
+	 * @return the currently executed stage or <code>null</code> if the job execution is already completed
+	 */
 	public ExecutionStage getCurrentExecutionStage() {
 
 		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
@@ -998,23 +1003,45 @@ public class ExecutionGraph implements ExecutionListener {
 	}
 
 	/**
-	 * Returns the types and numbers of instances which are required for the
-	 * current execution stage to complete.
+	 * Checks which instance types and how many instances of these types are required to execute the current stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
 	 * 
-	 * @return a map containing the types and respective numbers of instances required
-	 *         for the current execution stage to complete.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
 	 */
-	public Map<InstanceType, Integer> getInstanceTypesRequiredForCurrentStage() {
+	public void collectInstanceTypesRequiredForCurrentStage(final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
 
-		final Map<InstanceType, Integer> instanceTypeMap = new HashMap<InstanceType, Integer>();
+		collectInstanceTypesRequiredForStage(this.indexToCurrentExecutionStage, instanceTypeMap, executionState);
+	}
 
-		if (this.indexToCurrentExecutionStage >= this.stages.size()) {
-			return instanceTypeMap;
+	/**
+	 * Checks which instance types and how many instances of these types are required to execute the given stage
+	 * of this job graph. The required instance types and the number of instances are collected in the given map. Note
+	 * that this method does not clear the map before collecting the instances.
+	 * 
+	 * @param stage
+	 *        the stage in which the required instance types are collected.
+	 * @param instanceTypeMap
+	 *        the map containing the instances types and the required number of instances of the respective type
+	 * @param executionState
+	 *        the execution state the considered vertices must be in
+	 */
+	public void collectInstanceTypesRequiredForStage(final int stage, final Map<InstanceType, Integer> instanceTypeMap,
+			final ExecutionState executionState) {
+
+		if (stage >= this.stages.size()) {
+			LOG.error("Illegal stage  " + stage + " requested");
+			return;
 		}
 
 		final ExecutionStage nextStage = this.stages.get(this.indexToCurrentExecutionStage);
 		if (nextStage == null) {
-			LOG.warn("Stage " + this.indexToCurrentExecutionStage + " is not a valid execution stage");
+			LOG.error("Stage " + stage + " is not a valid execution stage");
+			return;
 		}
 
 		final Set<AbstractInstance> collectedInstances = new HashSet<AbstractInstance>();
@@ -1025,7 +1052,7 @@ public class ExecutionGraph implements ExecutionListener {
 			for (int j = 0; j < groupVertex.getCurrentNumberOfGroupMembers(); j++) {
 				// Get the instance type from the execution vertex if it
 				final ExecutionVertex vertex = groupVertex.getGroupMember(j);
-				if (vertex.getExecutionState() == ExecutionState.SCHEDULED) {
+				if (vertex.getExecutionState() == executionState) {
 					final AbstractInstance instance = vertex.getAllocatedResource().getInstance();
 
 					if (collectedInstances.contains(instance)) {
@@ -1036,7 +1063,7 @@ public class ExecutionGraph implements ExecutionListener {
 
 					if (instance instanceof DummyInstance) {
 						Integer num = instanceTypeMap.get(instance.getType());
-						num = (num == null) ? new Integer(1) : new Integer(num.intValue() + 1);
+						num = (num == null) ? Integer.valueOf(1) : Integer.valueOf(num.intValue() + 1);
 						instanceTypeMap.put(instance.getType(), num);
 					} else {
 						LOG.debug("Execution Vertex " + vertex.getName() + " (" + vertex.getID()
@@ -1045,8 +1072,6 @@ public class ExecutionGraph implements ExecutionListener {
 				}
 			}
 		}
-
-		return instanceTypeMap;
 	}
 
 	public void repairStages() {
